--- a/.github/workflows/nabil-pipline.yaml
+++ b/.github/workflows/nabil-pipline.yaml
@@ -33,7 +33,7 @@ jobs:
   build-and-push:
     name: Build and push docker image
     runs-on: ubuntu-latest
-    needs: lint-and-test
+    needs: checkouting and testing
     steps:
       - name: Checkout
         id: checkout
