added the exit 1 before the push

--- a/.github/workflows/nabil-pipline.yaml
+++ b/.github/workflows/nabil-pipline.yaml
@@ -52,5 +52,5 @@ jobs:
       - name: Build docker image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/github-action-school .
       - name: Push to Dockerhub
-        if: ${{ !inputs.build-and-push}}
+        if: ${{ inputs.build-and-push}}
         run: docker push ${{ secrets.DOCKER_USERNAME }}/github-action-school
